<resources>
    <string name="app_name">Notes App</string>
    <string name="title_login">Selamat Datang</string>
    <string name="description_login">Masukkan email dan password dari akun yang pernah kamu buat sebelumnya</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Masukkan email</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Masukkan password</string>
    <string name="action_login">Masuk</string>
    <string name="action_sign_up">Belum punya akun? <b>Daftar</b></string>
    <string name="label_full_name">Nama Lengkap</string>
    <string name="error_empty_field">%1s tidak boleh kosong.</string>
    <string name="error_invalid_field">%1s tidak valid.</string>
    <string name="error_email_already_registered">Alamat email telah terdaftar.</string>
    <string name="error_password_length">Password minimal harus terdiri dari 6 karakter.</string>
    <string name="label_security_password">Security Password</string>
    <string name="message_register_success">Pendaftaran berhasil! Silahkan login dengan akun Anda.</string>
    <string name="message_error_please_try_again">Terjadi kesalahan! Silahkan coba lagi.</string>
    <string name="title_register">Daftar Akun</string>
    <string name="description_register">Masukkan identitas yang diperlukan untuk dapat menikmati keseruannya</string>
    <string name="hint_full_name">Nama lengkap anda</string>
    <string name="label_security_password_toggle">Aktifkan security password</string>
    <string name="hint_security_password">Masukkan security password</string>
    <string name="action_register">Daftar</string>
    <string name="action_sign_in">Sudah punya akun? Masuk</string>
    <string name="message_error_invalid_credentials">Login gagal! Alamat email atau kata sandi salah.</string>
    <string name="message_error_user_not_found">Login gagal! Data pengguna tidak ditemukan.</string>
    <string name="action_logout">Logout</string>
    <string name="message_logout">Apakah Anda yakin ingin keluar?</string>
    <string name="action_yes">Ya</string>
    <string name="action_cancel">Batal</string>
    <string name="action_verifying">Memverifikasi…</string>
    <string name="action_search">Search</string>
    <string name="action_save">Simpan</string>
    <string name="hint_title">Judul</string>
    <string name="hint_content">Catatan</string>
    <string name="action_share">Share</string>
    <string name="message_error_not_found">%1s tidak ditemukan</string>
    <string name="note">Catatan</string>
    <string name="message_success_update">Catatan berhasil disimpan</string>
    <string name="message_success_import_note">Catatan telah ditambahkan</string>
    <string name="action_delete">Hapus</string>
    <string name="title_delete_note">Hapus Catatan</string>
    <string name="message_delete_note">Apakah Anda yakin ingin menghapus catatan?</string>
    <string name="message_success_delete">Catatan telah dihapus</string>
    <string name="message_invalid_qr_code">Kode QR tidak valid</string>
    <string name="action_add_note">Tambah Catatan</string>
    <string name="message_import_note">Apakah Anda ingin menambahkan \"%1$s\" ke dalam catatan Anda?</string>
    <string name="message_loading_importing_note">Menambahkan catatan. Mohon tunggu...</string>
    <string name="action_lock">Lock</string>
</resources>