<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/lock"
        android:icon="@drawable/baseline_lock_24"
        app:iconTint="?attr/colorOnPrimaryContainer"
        android:title="@string/action_lock"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_round_share_24"
        app:iconTint="?attr/colorOnPrimaryContainer"
        android:title="@string/action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete"
        android:title="@string/action_delete"
        app:iconTint="?attr/colorOnPrimaryContainer"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        app:iconTint="?attr/colorOnPrimaryContainer"
        android:icon="@drawable/ic_round_save_24"
        android:title="@string/action_save"
        app:showAsAction="always" />


</menu>

